# imac-c-gimp

./: .Makefile.swp  .directory  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  SUMMARY.md  fldqzdodqzd.ppm  flodqzd.ppm  minigimp.man
doc/: .bookignore  README.md  SUMMARY.md  minigimp.man
doc/api/: annotated.md  blur_8c.md  blur_8c_source.md  blur_8h.md  blur_8h_source.md  classes.md  contrast_8c.md  contrast_8c_source.md  contrast_8h.md  contrast_8h_source.md  dir_68267d1309a1af8e8297ef4c3efbcdba.md  dir_8f03655d6efc6136bf2baf9ce414e802.md  dir_977f0d85213d1c0a2b0ea3ba623898ac.md  dir_aebb8dcc11953d78e620bbef0b9e2183.md  dir_b1e1480277e1bd1794b03e39c91b2dd4.md  dir_c22671da58062d8418dba3cbe73b0c5b.md  edge_8c.md  edge_8c_source.md  edge_8h.md  edge_8h_source.md  emboss_8c.md  emboss_8c_source.md  emboss_8h.md  emboss_8h_source.md  enumerations.md  files.md  functions.md  group__imac-image.md  group__ppm.md  histogram_8c.md  histogram_8c_source.md  histogram_8h.md  histogram_8h_source.md  imac-img_8c.md  imac-img_8c_source.md  imac-img_8h.md  imac-img_8h_source.md  imac-kernel_8c.md  imac-kernel_8c_source.md  imac-kernel_8h.md  (+43 more)
images/: .directory  black.ppm  blue.ppm  car.ppm  flower.ppm  grandpa.ppm  green.ppm  no-contrast-cow.ppm  numbers.ppm  red.ppm  slash.ppm  white.ppm
src/: .main.c.swp  CMakeLists.txt  imac-img.c  imac-img.h  imac-lut.c  imac-lut.h  imac-lut3d.c  imac-lut3d.h  main.c  utils.c  utils.h
src/charts/: .histogram.h.swp  histogram.c  histogram.h
src/convolution/: blur.c  blur.h  convolution.c  convolution.h  edge.c  edge.h  emboss.c  (+1 more)
(+31 files in other folders)
